Changed persistent db to in_memory
Signed-off-by: Shivam Verma <shivam.r.verma@seagate.com>

--- a/csm/conf/etc/csm/csm.conf
+++ b/csm/conf/etc/csm/csm.conf
@@ -123,8 +123,8 @@ CSM:
   password: ''
   password_decryption_key: 'cortx'
   SESSION:
-    storage: 'persistent'
-    backend: 'database'
+    storage: 'local'
+    backend: 'in_memory'
 UDS:
   url: 'https://127.0.0.1:5000'
   saas_url: 'https://registration-api.lyve.seagate.com'
